--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -32,7 +32,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimaryDark"
-                    android:paddingBottom="48dp"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.cardview.widget.CardView
@@ -46,8 +45,10 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
+                            setProfileImage="@{model.image}"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
                             android:contentDescription="@string/app_name"
                             android:src="@drawable/pandem_aero" />
                     </androidx.cardview.widget.CardView>
