--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -69,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/name"
+                android:maxLength="50"
                 android:inputType="text"
                 android:textColor="@color/mainWhite"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -148,6 +149,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/username"
+                android:maxLength="20"
                 android:inputType="text"
                 android:textColor="@color/mainWhite" />
         </com.google.android.material.textfield.TextInputLayout>
