--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -48,8 +48,8 @@
                             setProfileImage="@{model.image}"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:scaleType="centerCrop"
                             android:contentDescription="@string/app_name"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/pandem_aero" />
                     </androidx.cardview.widget.CardView>
 
@@ -149,8 +149,10 @@
                         android:layout_height="32dp"
                         android:layout_marginStart="48dp"
                         android:layout_marginTop="24dp"
+                        android:layout_marginBottom="18dp"
                         android:src="@drawable/ic_info"
                         android:tint="@color/colorLogoYellow"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tvOrigin"
                         tools:ignore="ContentDescription" />
@@ -163,7 +165,7 @@
                         android:layout_marginEnd="48dp"
                         android:ellipsize="end"
                         android:fontFamily="@font/montserrat"
-                        android:maxLines="3"
+                        android:maxLines="4"
                         android:text="@{model.info}"
                         android:textColor="@color/mainWhite"
                         android:textSize="16sp"
@@ -190,12 +192,12 @@
                     android:id="@+id/noItem"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
-                    android:src="@drawable/no_items"
+                    android:layout_margin="12dp"
                     android:elevation="20dp"
+                    android:src="@drawable/no_items"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_margin="12dp"
                     app:layout_constraintTop_toBottomOf="@+id/myBidTitle" />
 
                 <TextView
